2005-09-06  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/widgets/ChatWidget.cpp, src/components/widgets/ConsoleWidget.cpp, src/components/widgets/DebugWidget.cpp, src/components/widgets/EntityPickerWidget.cpp, src/components/widgets/GiveWidget.cpp, src/components/widgets/IconBase.h, src/components/widgets/IngameChatWidget.cpp, src/components/widgets/InspectWidget.*, src/components/widgets/InventoryWidget.cpp, src/components/widgets/JesusEdit.cpp, src/components/widgets/MakeEntityWidget.cpp, src/components/widgets/Performance.cpp, src/components/widgets/Quit.cpp, src/components/widgets/ServerBrowserWidget.cpp, src/components/widgets/ServerWidget.cpp
		* use new utility methods in Widget.cpp which cleans up the code a bit
		* added some more comments

2005-09-06  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Widget.*
		* added more utility methods to be used by subclasses, for example a getWindow(...) method
		* added more comments

2005-09-05  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.*
		* added "/inspect $entityid" console command

2005-09-05  Erik Hjortsberg  <erik@katastrof.nu>

	* TODO: updated items

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarController.* : make sure all values are initiialized to the correct values (in most cases 0) in the constructor

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp: since Ogre 1.0.4 the issue with attached entities not being scaled correctly has been fixed, so thus we need to deal with this in Model
	* configure.ac: require Ogre 1.0.4

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.cpp: Check that the predicted velocity is valid before showing it, since at least with the current Eris it will be invalid if the entity is not moving.

2005-07-26  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: include new .imageset files